more consistent letter spacing for headers (fix mistake)
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@20119 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/themes/beeldgeluid/css/pages.css
+++ b/sites/all/themes/beeldgeluid/css/pages.css
@@ -669,7 +669,6 @@ ul.links li {
 .node h2,
 .node h3 {
   font-size: 1.67em;
-  letter-spacing: 0.1em;
   margin: 0.83em 0 0 0;
 }
 
